--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "react-time-ago": "^6.0.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -42,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/javascript-time-ago": "^2.0.1"
   }
 }
